BugzID: #47248 - fix campaign spacing issues

--- a/drupal/profiles/takepart/themes/takepart3/css/style.css
+++ b/drupal/profiles/takepart/themes/takepart3/css/style.css
@@ -2948,10 +2948,10 @@ l div.addthis_toolbox a.addthis_button_google_plusone,.node-type-openpublish-pho
 }
 
 body.node-type-takepart-campaign #highlighted {
-    padding: 25px 0 0 0;
+    padding: 10px 0 0;
 }
 
-.multipage-campaign #highlighted {
+body.multipage-campaign #highlighted {
     padding: 0;
 }
 
